<next version> <kevin@koconnor.net>

  * New support for memory tracing based on MMU manipulation.  This
    allows one to watch reads/writes to memory on any ARM platform.
    To use this infrastructure, run "addlist mmutrace <start> <size>
    <rw>".  Where <start> is address to trace, <size> is the size of
    the address range to trace, and <rw> is a string that determines
    whether or not to check for reads or writes.

  * New support in haretconsole for showing architecture register
    names during the "watch" and "wi" commands.

  * New command "evalf".  One can use this to build commands
    dynamically - for example:
      evalf "runscript startup-%s.txt" MACHNAME

  * Status messages can now be written directly to the frame buffer
    during the linux boot (when fbduringboot is enabled).

  * New machine list file (src/mach/machlist.txt) allows one to easily
    define simple machine types.  (More complicated machines can still
    use the existing infrastructure.)

  * Several new machines were added.

20070116 0.4.7 <kevin@koconnor.net>, <pmiscml@gmail.com>

  * Add new machines: rx3715, Axim X50

  * New variable: FBDURINGBOOT

  * DUMP no longer takes a filename parameter.  Use the REDIR command
    instead.  (For example, "DUMP GPIO out.txt" is now "REDIR out.txt
    DUMP GPIO".)

  * Implement new command: IF

  * Implement new variable MACHMTYPE (contains the auto detected
    mtype).

20070103 0.4.6 <kevin@koconnor.net>, <pmiscml@gmail.com>

  * New commands: RUNSCRIPT, BG, REDIR

  * The linload build support has been modified to support linking in
    a haret script.  The last line in the script should run the new
    "RAMBOOT" command.  An example build would look something like:

    make linload SCRIPT=myharet.txt KERNEL=zImage INITRD=abc

  * Add new machines: hermes, wizard, g500, artemis

  * Add mechanism to check for DMA corruption during kernel load by
    CRCing the kernel before and after the preloader relocates it.  To